@@ -157,6 +157,8 @@ SETTING(flipbookWindow            , FlipbookWindow            , "flipbook/window
 SETTING(overrideFontSize          , OverrideFontSize          , "settings/overridefontsize"             , OVERRIDE_FONT_SIZE_DEFAULT)
 SETTING(fontSize                  , FontSize                  , "settings/fontSize"                     , -1)
 SETTING(globalPressureCurve       , GlobalPressureCurve       , "settings/input/globalcurve"            , GLOBAL_PRESSURE_CURVE_DEFAULT)
+SETTING(globalPressureCurveEraser , GlobalPressureCurveEraser , "settings/input/globalcurveeraser"      , GLOBAL_PRESSURE_CURVE_DEFAULT)
+SETTING(globalPressureCurveMode   , GlobalPressureCurveMode   , "settings/input/globalcurvemode"        , 0)
 SETTING(hostEnableAdvanced        , HostEnableAdvanced        , "history/hostenableadvanced"            , false)
 SETTING(ignoreCarrierGradeNat     , IgnoreCarrierGradeNat     , "history/cgnalert"                      , false)
 SETTING(inputPresets              , InputPresets              , "inputpresets"                          , QVector<QVariantMap>())
